--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.robproductions.opengraphgui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "displayName": "Open Graph GUI",
-  "description": "An open-source Editor GUI for use with URP ShaderGraphs in Unity, aiming to clean up the look of Material Properties while providing ease-of-use via tagging.",
+  "description": "An open-source generic Shader GUI for use with URP ShaderGraphs. This package aims to help developers clean up the look of their Material properties while maintaining the built-in style.",
   "unity": "2020.3",
   "changelogUrl": "https://github.com/RobProductions/OpenGraphGUI",
   "licensesUrl": "https://github.com/RobProductions/OpenGraphGUI/blob/main/LICENSE",
@@ -16,5 +16,12 @@
   "author": {
     "name": "RobProductions",
     "url": "https://github.com/RobProductions"
-  }
+  },
+  "samples": [
+    {
+      "displayName": "Draw Property Extension",
+      "description": "Demonstration of how to extend the RPOpenGraphGUI and add in custom rendering for specific Material Properties.",
+      "path": "Samples~/DrawPropertyExtension"
+    }
+  ]
 }
